# wasm-chrome-test

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js  webpack.config.release.cjs
src/: lib.rs  methods.rs  wasm_methods.rs
