[package]
name = "wasm-chrome-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
log = "0.4.17"
console_log = { version = "0.2.2", features = ["color"] }
js-sys = "0.3.63"

[lib]
crate-type=["cdylib","rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
